--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_navigation_msgs
 	base = 95bc8bf
-	trimbase = e4367d9
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
