--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_navigation_msgs
-	base = bec9913
-	trimbase = 
+	base = 9216f22
+	trimbase = bec9913
 	parent = upstream
 	previous = 5b7f162
