--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_view_controller_msgs
 	base = 6f4c2bf
-	trimbase = b9b7660
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
