--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_view_controller_msgs
-	base = f0cc369
-	trimbase = 
+	base = b2e797b
+	trimbase = f0cc369
 	parent = upstream
 	previous = 5b7f162
