--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robotino_description
 	base = 90bd1a5
-	trimbase = 555f24d
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
