--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robotino_msgs
-	base = 162f898
-	trimbase = 
+	base = ccede32
+	trimbase = 162f898
 	parent = upstream
 	previous = 5b7f162
