--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_3d_mapping_msgs
-	base = 8ce1334
-	trimbase = 
+	base = 0ae7957
+	trimbase = 8ce1334
 	parent = upstream
 	previous = 5b7f162
