--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_waypoint_msgs
 	base = 69167b9
-	trimbase = 16ad3fa
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
