--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_waypoint_msgs
-	base = 7129f70
-	trimbase = 
+	base = 2ce3e10
+	trimbase = 7129f70
 	parent = upstream
 	previous = 5b7f162
