--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_prediction_msgs
-	base = 28826e5
-	trimbase = 
+	base = 0356d34
+	trimbase = 28826e5
 	parent = upstream
 	previous = 5b7f162
