--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_kclhand_msgs
 	base = b3062d2
-	trimbase = bac001e
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
