--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_3d_localizer_msgs
 	base = f477a31
-	trimbase = 3502e6b
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
