--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_3d_localizer_msgs
-	base = ce75be2
-	trimbase = 
+	base = 477e08f
+	trimbase = ce75be2
 	parent = upstream
 	previous = 5b7f162
