--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = softhand_description
 	base = c8c751b
-	trimbase = d7b8817
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
