--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_vad_msgs
-	base = 6e17062
-	trimbase = 
+	base = 694c892
+	trimbase = 6e17062
 	parent = upstream
 	previous = 5b7f162
