--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_common
-	base = 8748326
-	trimbase = 
+	base = 1fc4f81
+	trimbase = 8748326
 	parent = upstream
 	previous = 5b7f162
