--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_mhand_msgs
-	base = 7f60c66
-	trimbase = 
+	base = 129ff84
+	trimbase = 7f60c66
 	parent = upstream
 	previous = 5b7f162
