--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_planning_knowledge_msgs
 	base = 546b756
-	trimbase = d6a381f
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
