--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_planning_knowledge_msgs
-	base = 20e1272
-	trimbase = 
+	base = df4801f
+	trimbase = 20e1272
 	parent = upstream
 	previous = 5b7f162
