--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_2d_localizer_msgs
 	base = 09367c4
-	trimbase = 247d83f
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
