--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_2d_localizer_msgs
-	base = ee4d556
-	trimbase = 
+	base = ebf76ba
+	trimbase = ee4d556
 	parent = upstream
 	previous = 5b7f162
