--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_hri_msgs
-	base = 4a35046
-	trimbase = 
+	base = b7aaa6a
+	trimbase = 4a35046
 	parent = upstream
 	previous = 5b7f162
