--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_speech_msgs
-	base = dfdefa4
-	trimbase = 
+	base = 9058d4f
+	trimbase = dfdefa4
 	parent = upstream
 	previous = 5b7f162
