--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_object_perception_msgs
-	base = 5ca199d
-	trimbase = 
+	base = 182f3f9
+	trimbase = 5ca199d
 	parent = upstream
 	previous = 5b7f162
