--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_dynamic_filter_msgs
 	base = 3bb154f
-	trimbase = 5dc0503
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
