--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_dynamic_filter_msgs
-	base = bebacdc
-	trimbase = 
+	base = baab5a6
+	trimbase = bebacdc
 	parent = upstream
 	previous = 5b7f162
