--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_person_tracker_msgs
 	base = b72665b
-	trimbase = 0a02c37
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
