--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_safety_msgs
 	base = 4268813
-	trimbase = 1d4c8fc
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
