--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_safety_msgs
-	base = a67f4ee
-	trimbase = 
+	base = c61a452
+	trimbase = a67f4ee
 	parent = upstream
 	previous = 5b7f162
