--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_manipulation_msgs
 	base = de60b5f
-	trimbase = 935cc49
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
