--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_manipulation_msgs
-	base = 8135f1d
-	trimbase = 
+	base = 1fdfb41
+	trimbase = 8135f1d
 	parent = upstream
 	previous = 5b7f162
