--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_footprint_observer_msgs
 	base = 8ea4ef0
-	trimbase = 1014dd7
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
