--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_footprint_observer_msgs
-	base = 0f17b00
-	trimbase = 
+	base = 4f301c6
+	trimbase = 0f17b00
 	parent = upstream
 	previous = 5b7f162
