Imported upstream version '0.0.30' of 'upstream'

--- a/squirrel_manipulation_msgs/CMakeLists.txt
+++ b/squirrel_manipulation_msgs/CMakeLists.txt
@@ -19,17 +19,9 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate actions in the 'action' folder
  add_action_files(
    FILES
-   BlindGrasp.action
-   Drop.action
-   Inspect.action
-   Lean.action
-   PickUp.action
-   Push.action
-   PutDown.action
+   Manipulation.action
    Smash.action
-   GraspAction.action
-   Ptp.action
-   JointPtp.action
+   Push.action
    Handover.action
  )
 
