--- a/robotino_msgs/CMakeLists.txt
+++ b/robotino_msgs/CMakeLists.txt
@@ -36,6 +36,7 @@ find_package(catkin REQUIRED COMPONENTS
    LookAtImagePosition.srv
    LookAtPanTilt.srv
    LookAtPosition.srv
+   ReturnJointStates.srv
 )
 ## Generate added messages and services with any dependencies listed here
  generate_messages(
