--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_navigation_msgs
 	base = 9216f22
-	trimbase = bec9913
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
