--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_navigation_msgs
-	base = 136549d
-	trimbase = 
+	base = 20a305d
+	trimbase = 136549d
 	parent = upstream
 	previous = c004210
