--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_view_controller_msgs
 	base = b2e797b
-	trimbase = f0cc369
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
