--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_view_controller_msgs
-	base = 7706fe2
-	trimbase = 
+	base = 3eae0c3
+	trimbase = 7706fe2
 	parent = upstream
 	previous = c004210
