--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robotino_description
 	base = cc73ddc
-	trimbase = 5e35986
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
