--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robotino_description
-	base = 62a4cae
-	trimbase = 
+	base = e06ad5c
+	trimbase = 62a4cae
 	parent = upstream
 	previous = c004210
