--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robotino_msgs
-	base = f2bac28
-	trimbase = 
+	base = eb7dfc8
+	trimbase = f2bac28
 	parent = upstream
 	previous = c004210
