--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_3d_mapping_msgs
-	base = 6829a29
-	trimbase = 
+	base = 0063a34
+	trimbase = 6829a29
 	parent = upstream
 	previous = c004210
