--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_waypoint_msgs
-	base = 72b3806
-	trimbase = 
+	base = bc8632b
+	trimbase = 72b3806
 	parent = upstream
 	previous = c004210
