--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_prediction_msgs
 	base = 0356d34
-	trimbase = 28826e5
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
