--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_prediction_msgs
-	base = 71e04a8
-	trimbase = 
+	base = 9f64f84
+	trimbase = 71e04a8
 	parent = upstream
 	previous = c004210
