--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_kclhand_msgs
 	base = 0af328f
-	trimbase = 80535c4
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
