--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_kclhand_msgs
-	base = ad72c4b
-	trimbase = 
+	base = deadafd
+	trimbase = ad72c4b
 	parent = upstream
 	previous = c004210
