--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_3d_localizer_msgs
-	base = 8030e80
-	trimbase = 
+	base = ee0ef47
+	trimbase = 8030e80
 	parent = upstream
 	previous = c004210
