--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = softhand_description
 	base = 31b2772
-	trimbase = 2afe93b
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
