--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = softhand_description
-	base = abae36a
-	trimbase = 
+	base = c322909
+	trimbase = abae36a
 	parent = upstream
 	previous = c004210
