--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_vad_msgs
-	base = d267f9f
-	trimbase = 
+	base = 0c13333
+	trimbase = d267f9f
 	parent = upstream
 	previous = c004210
