--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = cfb32e2
-	trimbase = 
+	trim = squirrel_motion_planner_msgs
+	base = 2c834af
+	trimbase = cfb32e2
 	parent = upstream
 	previous = c004210
