--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_common
-	base = 5177921
-	trimbase = 
+	base = f6675a4
+	trimbase = 5177921
 	parent = upstream
 	previous = c004210
