--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_mhand_msgs
-	base = 06a8e8e
-	trimbase = 
+	base = 878b7d8
+	trimbase = 06a8e8e
 	parent = upstream
 	previous = c004210
