--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_planning_knowledge_msgs
 	base = df4801f
-	trimbase = 20e1272
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
