--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_planning_knowledge_msgs
-	base = 3868216
-	trimbase = 
+	base = 23d57b4
+	trimbase = 3868216
 	parent = upstream
 	previous = c004210
