--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_2d_localizer_msgs
-	base = 02f5418
-	trimbase = 
+	base = 12f30f5
+	trimbase = 02f5418
 	parent = upstream
 	previous = c004210
