--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_hri_msgs
-	base = 56cb61e
-	trimbase = 
+	base = cffe615
+	trimbase = 56cb61e
 	parent = upstream
 	previous = c004210
