--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_speech_msgs
 	base = 9058d4f
-	trimbase = dfdefa4
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
