--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_speech_msgs
-	base = 7d506ef
-	trimbase = 
+	base = f846fae
+	trimbase = 7d506ef
 	parent = upstream
 	previous = c004210
