--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_object_perception_msgs
-	base = ff8846f
-	trimbase = 
+	base = 2db7ba6
+	trimbase = ff8846f
 	parent = upstream
 	previous = c004210
