--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_dynamic_filter_msgs
-	base = fed1d89
-	trimbase = 
+	base = f6915d3
+	trimbase = fed1d89
 	parent = upstream
 	previous = c004210
