--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_person_tracker_msgs
 	base = 26d4d51
-	trimbase = 1373fd7
+	trimbase = 
 	parent = upstream
 	previous = 5b7f162
