--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_person_tracker_msgs
-	base = 05d09f4
-	trimbase = 
+	base = 4aebd85
+	trimbase = 05d09f4
 	parent = upstream
 	previous = c004210
