--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_safety_msgs
-	base = ffbf129
-	trimbase = 
+	base = 133b845
+	trimbase = ffbf129
 	parent = upstream
 	previous = c004210
