--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_manipulation_msgs
-	base = 9421c27
-	trimbase = 
+	base = 6620741
+	trimbase = 9421c27
 	parent = upstream
 	previous = c004210
