--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = squirrel_footprint_observer_msgs
-	base = 6e16e8e
-	trimbase = 
+	base = 4a31658
+	trimbase = 6e16e8e
 	parent = upstream
 	previous = c004210
