--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2c834af
+	base = 0a3aa2c
 	trimbase = 
 	parent = release/indigo/squirrel_motion_planner_msgs
-	previous = 
+	previous = 2c834af
