--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 09630ab
+	base = e7d1fe6
 	trimbase = 
 	parent = debian/indigo/squirrel_motion_planner_msgs
-	previous = 
+	previous = 09630ab
